<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    tools:context="MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/nome_do_time_a"
                android:inputType="text"
                android:padding="4dp"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/gols_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/gols_marcados"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/cart_A_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/cart_amarelos"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/cart_V_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/cart_vermelhos"
                android:textSize="15sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addGolForTeamA"
                android:text="@string/_1_gol" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addCartAForTeamA"
                android:text="@string/_1_cart_o_amarelo" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addCartVForTeamA"
                android:text="@string/_1_cart_o_vermelho" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/nome_do_time_b"
                android:inputType="text"
                android:textColor="#000000"
                android:padding="4dp"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/gols_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/gols_marcados"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/cart_A_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/cart_amarelos"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/cart_V_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/cart_vermelhos"
                android:textSize="15sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addGolForTeamB"
                android:text="@string/_1_gol" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addCartAForTeamB"
                android:text="@string/_1_cart_o_amarelo" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addCartVForTeamB"
                android:text="@string/_1_cart_o_vermelho" />


        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="RGame"
            android:text="@string/nova_partida" />

    </RelativeLayout>

</LinearLayout>